feat: add watch progress
